Add several exercises

--- a/coding/components/code/30-clickable.html
+++ b/coding/components/code/30-clickable.html
@@ -15,7 +15,7 @@
             
             el.addEventListener('click', function () {
                 el.setAttribute('opacity', 0.2);
-                el.object3D.scale.set(0.9, 0.9, 1);    
+                el.object3D.scale.set(0.9, 0.9, 0.9);    
             });
         }
       });
@@ -28,7 +28,7 @@
       <a-text value="My Knees"                 could-bug-me-less  position="-1.1 1.5 -1.5" color="red" font="kelsonsans"></a-text>
       <a-sky color="lightyellow"></a-sky>
       <a-camera mouse-cursor >
-        <a-cursor fuse="fuse: true; fuseTimeout: 200" color="green"></a-cursor>
+        <a-cursor color="green"></a-cursor>
       </a-camera>
     </a-scene>
   </body>
