--- a/coding/components/code/40-clickable-2.html
+++ b/coding/components/code/40-clickable-2.html
@@ -41,7 +41,7 @@
       <a-text value="My Knees"                 could-bug-me-less  position="-1.1 1.5 -1.5" color="red" font="kelsonsans"></a-text>
       <a-sky color="lightyellow"></a-sky>
       <a-camera mouse-cursor >
-        <a-cursor fuse="fuse: true; fuseTimeout: 200" color="green"></a-cursor>
+        <a-cursor color="green"></a-cursor>
       </a-camera>
     </a-scene>
   </body>
